# excel-automation

./: .gitignore  README.md  main.py  pyproject.toml
1с_transform_sheet/: main.py
add_missing_readings/: main.py
microgeneration/: main.py
p2_readings/: main.py
process_legal_entities/: main.py
process_matritca_readings/: main.py
process_one_zone_meters/: main.py
