[project]
name = "excel-automation"
version = "0.1.0"
description = "Excel parsing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.18.0",
    "mypy>=1.18.2",
    "natsort>=8.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "types-openpyxl>=3.1.5.20250919",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "ty>=0.0.1a26",
]
